2006-05-16  Alexander Larsson  <alexl@redhat.com>

	* modules/computer-method.c: (drive_connected), (fill_root):
	Show all drives in computer:// (#341446)
	Patch from Xavier Claessens

2006-05-14  Christian Kellner  <gicmo@gnome.org>

	* programs/gnomevfs-df.c: (ignore_volume): Ignore volumes
	with type == NULL for now (e.g. "Connect to Server" volumes).
	Fixes #340910

2006-05-14  Christian Kellner  <gicmo@gnome.org>
	
	Backported patch by Alexander Larrson from HEAD to unbreak
	Christian's Unalias MIME types patch (Fixes bug #341534):

	* libgnomevfs/gnome-vfs-mime-info-cache.c: (get_all_parent_types):
	Lock around calls to xdg_mime_*

2006-05-12  Christian Neumair  <chris@gnome-de.org>

	* libgnomevfs/gnome-vfs-mime-info-cache.c:
	(gnome_vfs_mime_info_cache_dir_init),
	(gnome_vfs_mime_info_cache_dir_init_defaults_list):
	Unalias application MIME types before adding them to the cache.

2006-05-02  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=338893: file size is
	reported wrong in the FTP method for files larger than 2 GB.

	* configure.in.orig: Check for atoll() to AC_CHECK_FUNCS().
	Check for stat.st_blksize stat.st_rdev, and AC_STRUCT_ST_BLOCKS
	(without these, we were never entering the corresponding #ifdef
	blocks in gnome-vfs-parse-ls.c, and thus not filling in certain
	fields of struct stat).

	* libgnomevfs/gnome-vfs-parse-ls.c (gnome_vfs_parse_ls_lga): Use
	atoll() when available for stat.st_size, or atof() if it's not
	available.  Use HAVE_STRUCT_STAT_ST_RDEV,
	HAVE_STRUCT_STAT_ST_BLOCKS, and HAVE_STRUCT_STAT_ST_BLKSIZE instead of
	HAVE_ST_RDEV, HAVE_ST_BLOCKS, and HAVE_ST_BLKSIZE, respectively.

2006-04-26  Federico Mena Quintero  <federico@novell.com>

	* libgnomevfs/gnome-vfs-hal-mounts.c
	(_hal_add_drive_without_volumes): A drive with no mounted
	volumes is user-visible if it *does not* have
	storage.media_check_enabled turned on:  for example, floppy